# MinecraftLauncher-CLI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mkdocs.yml  xmake.lua
docs/: index.md
src/: MCL.hpp  config.hpp  main.cpp
src/config/: config.cpp
src/include/: info.h
src/launch/: launch.cpp  test.mlp
src/mlp/: mlp.hpp  test.mlp
src/tests/: main_test.cpp
